--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -8,8 +8,12 @@ dependencies = [
     "dj-database-url>=3.0.1",
     "django>=5.2.7",
     "django-cors-headers>=4.9.0",
+    "django-filter>=25.2",
+    "django-restframework>=0.0.1",
     "djangorestframework>=3.16.1",
     "dotenv>=0.9.9",
+    "markdown>=3.9",
+    "numpy>=2.3.3",
     "pandas>=2.3.3",
     "psycopg2>=2.9.11",
 ]
