--- a/frontend/.env
+++ b/frontend/.env
@@ -1,6 +1,9 @@
 # URL da API do backend Django
 # Para desenvolvimento local:
-# VITE_API_URL=http://localhost:8000/api
+VITE_API_URL=http://localhost:8000/api
 
-# Para acesso remoto via ngrok (mude conforme a URL gerada):
-VITE_API_URL=https://ffd6a63226db.ngrok-free.app/api
+# Para acesso remoto via Cloudflare Tunnel:
+# VITE_API_URL=https://phillips-mpegs-coal-trans.trycloudflare.com/api
+
+# Para acesso remoto via ngrok (desabilitado - bandwidth excedida):
+# VITE_API_URL=https://ffd6a63226db.ngrok-free.app/api
